--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Global MBA Program
 description: Tunghai University Global MBA - Cultivating Future Business Leaders
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/GMBA" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site
 
 # Build settings
